# cnn-ee-tui-audio-player

./: .gitignore  Cargo.toml  README.md
docs/: functional-specification.md  requirements.md  technical-specification.md  ui-ux-specification.md  user-stories.md
docs/steerings/: README.md
docs/steerings/001-directory-navigation/: README.md  directory-navigation.md  implementation-plan.md
docs/steerings/002-repeat-toggle/: README.md  repeat-toggle.md
docs/steerings/003-continuous-playback/: README.md  continuous-playback.md
docs/steerings/004-title-group-playback/: README.md  title-group-playback.md
src/: app.rs  files.rs  main.rs  player.rs  ui.rs
