[package]
name = "cnn-ee-tui-audio-player"
version = "0.1.0"
edition = "2021"
authors = ["akiko.kusaka"]
description = "Terminal-based music player for English learning"

[[bin]]
name = "play-cnnee"
path = "src/main.rs"

[dependencies]
ratatui = "0.24"
crossterm = "0.27"
rodio = "0.17"
walkdir = "2.4"
anyhow = "1.0"
symphonia = "0.5"
